Performance Improvements: - Replace Boolean constructor calls with Boolean.valueOf(x) - Remove superflous String constructor